# pyshbundle

./: .gitignore  MANIFEST.in  README.md  environment-lock.yml  environment.yml  mkdocs.yml  paper.bib  paper.md  pyproject.toml  requirements-lock.txt  requirements.txt  setup.cfg  setup.py
.github/workflows/: ci-docs-gh-pages.yml  draft-pdf.yml  python-package-conda.yml
deprecated/: deprecated_functions.py
docs/: changelog.md  contributing.md  core_functionality.md  index.md  installation.md  load_data.md  theory.md
examples/: 01_intro_spherical_harmonics_with_pyshbundle.ipynb  02_load_data.ipynb  03_visualizations.ipynb  04_TWSA_time_series.ipynb  validation_pyshbundle.ipynb
pyshbundle/: GRACEconstants.py  GRACEpy.py  __init__.py  hydro.py  io.py  pysh_core.py  pyshbundle.py  reshape_SH_coefficients.py  sc2cs.py  shutils.py  viz_utils.py
tests/: test_pyshbundle.py  test_validation_pyshbundle.py
