[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[project]
name = "pyshbundle"
version = "0.3.0"
description = "PySHbundle: A Python implementation of GRACE Spherical Harmonics Synthesis MATLAB codes SHbundle"
readme = "README.md"
requires-python = ">=3.9"
license={file = "LICENSE.md"}
keywords = ["Spherical Harmonics", "Geodesy", "Hydrology"]
authors = [
  { name="Amin Shakya", email="aminshk50@outlook.com"},
]
maintainers =  [
    {name="Abhishek Mhamane", email="vabhi.mhamane30@gmail.com"}, 
    {name="Vivek Kumar Yadav", email="viveky@iisc.ac.in"},
]
classifiers=[
    'Development Status :: 4 - Beta',
    'Intended Audience :: Science/Research',
    'License :: OSI Approved :: GNU General Public License v3 (GPLv3)',
    'Natural Language :: English',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.12',
]

dependencies=[
    "numpy",
    "pandas",
    "netCDF4",
    "scipy",
    "xarray",
    "julian",
    "geopandas",
    "matplotlib",
    "rasterio",
    "shapely",
    "tqdm",
    "cartopy",
    "ipykernel",
    "jupyterlab",
    "rioxarray",
]

[project.urls]
Homepage = "https://github.com/GESS-research-group/pyshbundle"
Issues = "https://github.com/GESS-research-group/pyshbundle/issues"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["tests"]
filterwarnings = [
    "ignore::DeprecationWarning",
]